# gSoapRabbitMQ

./: CMakeLists.txt  main.cpp
wsdl2h/: ns2.nsmap  soapC.cpp  soapH.h  soapStub.h  xsd.h
xsd/v.1.0/: CommonTypes.xsd  Envelope.xsd  MessageInfo.xsd  ParseKeywords.xsd  sample.xml
